--- a/src/css/style.css
+++ b/src/css/style.css
@@ -219,7 +219,7 @@
   .row__container {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 1rem;
   }
 
   .grid__container {
